# gputop

./: .gitignore  Cargo.toml  README.md  install.sh  research.md
src/: app.rs  cpu.rs  event.rs  gpu.rs  main.rs  ui.rs
